--- a/configs/experiment/eval_retriever_default.yaml
+++ b/configs/experiment/eval_retriever_default.yaml
@@ -10,12 +10,22 @@ defaults:
 tags: ["eval", "retriever"]
 
 task_name: "eval_retriever"
+ckpt_path: null  # 评估时可通过 CLI 传入
 
 data:
   sampler:
     train_batches_per_epoch: null
 
 # 默认开启 g_agent 生成，依赖 dataset.paths.embeddings 解析 LMDB。
+eval_persist:
+  retriever:
+    enabled: true
+    output_dir: ${dataset.materialized_dir}/eval_retriever
+    splits: ["test"]
+    textualize: true
+  gflownet:
+    enabled: false
+
 g_agent:
   enabled: true
   splits: ["train", "validation", "test"]
