--- a/configs/experiment/eval_retriever_webqsp.yaml
+++ b/configs/experiment/eval_retriever_webqsp.yaml
@@ -6,4 +6,5 @@ defaults:
 
 tags: ["eval", "retriever", "webqsp"]
 
+ckpt_path: "logs/train_retriever_webqsp/runs/2025-11-30_14-48-31/checkpoints/epoch_189.ckpt"
 task_name: "eval_retriever_webqsp"
