--- a/configs/experiment/train_gflownet_default.yaml
+++ b/configs/experiment/train_gflownet_default.yaml
@@ -5,8 +5,8 @@ defaults:
   - override /data: gflownet
   - override /model: gflownet_module
   - override /callbacks: default
-  - override /logger: null
-  - override /trainer: standard
+  - override /logger: wandb
+  - override /trainer: gpu
 
 task_name: "gflownet_train"
 tags: ["gflownet"]
@@ -14,17 +14,12 @@ train: true
 test: true
 ckpt_path: null
 seed: 42
-optimized_metric: "val/success"
+optimized_metric: "val/rollout_reward"
 
 # 打开 GFlowNet 专用 debug 日志（独立文件 logs/gflownet_debug.log）。
 gflownet_debug: true
 # 若需环境内对拍 success/hit（首图详细命中日志），打开 env_debug
 env_debug: true
-
-# resources for embeddings/vocab (materialized)
-resources:
-  vocabulary_path: ${dataset.materialized_dir}/vocabulary/vocabulary.lmdb
-  embeddings_dir: ${dataset.materialized_dir}/embeddings
 
 # Ensure validation runs every epoch for early stopping/monitoring.
 trainer:
@@ -33,11 +28,21 @@ trainer:
 # Override callback monitors for GFlowNet (no ranking/mrr available)
 callbacks:
   model_checkpoint:
-    monitor: val/success
+    monitor: val/rollout_reward
     mode: max
     filename: "epoch_{epoch:03d}"
     auto_insert_metric_name: False
   early_stopping:
-    monitor: val/success
+    monitor: val/rollout_reward
     mode: max
-    patience: 20
+    patience: 50
+
+# Soft prior 默认偏弱并可调；如需关闭先验，将 retriever_prior_alpha 设为 0。
+model:
+  training_cfg:
+    retriever_prior_alpha: 2.0
+    retriever_prior_anneal:
+      start: 2.0
+      end: 0.5
+      steps: 10000
+    gt_loss_weight: 0.15
