--- a/configs/experiment/train_retriever_webqsp.yaml
+++ b/configs/experiment/train_retriever_webqsp.yaml
@@ -4,4 +4,4 @@ defaults:
   - train_retriever_default
   - override /dataset: webqsp
 
-tags: ["webqsp", "train","retriever"]
+tags: ["webqsp", "train_retriever"]
