--- a/configs/model/embedder/default.yaml
+++ b/configs/model/embedder/default.yaml
@@ -1,11 +1,10 @@
 _target_: src.models.components.gflownet_embedder.GraphEmbedder
 
 hidden_dim: ${model.hidden_dim}
-# Projector仅用于推理复用 retriever 权重，关闭 dropout。
+# 默认复用 retriever checkpoint 权重做特征提取初始化；dropout 可用于训练期正则。
 proj_dropout: 0.0
 projector_checkpoint: ???
-freeze_projectors: true
-kge_interaction: concat
+freeze_retriever: true
 projector_key_prefixes:
   - retriever.model._orig_mod
   - retriever.model
@@ -13,5 +12,3 @@ projector_key_prefixes:
   - model._orig_mod
   - model
   - ""
-# 默认开启 GFN 投影，将 retriever 空间映射到 GFlowNet hidden_dim，保留 retriever 权重冻结。
-use_gfn_projectors: true
