--- a/configs/experiment/eval_retriever_cwq.yaml
+++ b/configs/experiment/eval_retriever_cwq.yaml
@@ -2,6 +2,6 @@
 
 defaults:
   - eval_retriever_default
-  - override /dataset: cwq
+  - override /dataset: cwq-sub
 
 tags: ["retriever", "eval", "cwq"]
