--- a/configs/experiment/eval_retriever_default.yaml
+++ b/configs/experiment/eval_retriever_default.yaml
@@ -26,8 +26,9 @@ g_agent:
   enabled: true
   splits: ["train", "validation", "test"]
   output_dir: ${dataset.materialized_dir}/g_agent
-  anchor_top_k: 200
-  include_gt:
+  anchor_top_k: 400
+  force_include_gt:
     train: true
-    validation: true
+    validation: false
+    test: false
   skip_retriever_metrics: false
