--- a/configs/experiment/train_retriever_cwq.yaml
+++ b/configs/experiment/train_retriever_cwq.yaml
@@ -2,6 +2,7 @@
 
 defaults:
   - train_retriever_default
-  - override /dataset: cwq
+  # Train on the filtered dataset to avoid empty-graph samples in raw CWQ.
+  - override /dataset: cwq-sub
 
 tags: ["cwq", "train_retriever"]
