--- a/configs/data/gflownet.yaml
+++ b/configs/data/gflownet.yaml
@@ -5,11 +5,12 @@ cache_paths:
   validation: ${dataset.materialized_dir}/g_agent/validation_g_agent.pt
   test: ${dataset.materialized_dir}/g_agent/test_g_agent.pt
 
-batch_size: 64
+batch_size: 8
 num_workers: 8
 pin_memory: true
 drop_last: false
 persistent_workers: true
+prefetch_factor: 4
 shuffle_train: true
 drop_unreachable: false
 
