--- a/configs/model/actor/gflownet_actor.yaml
+++ b/configs/model/actor/gflownet_actor.yaml
@@ -10,5 +10,7 @@ policy_temperature: 1.0
 eval_policy_temperature: 0.7
 stop_logit_bias: -1.0
 random_action_prob: 0.1
+# retriever score clamp for log() in residual base distribution
+score_eps: 1.0e-8
 debug_actions: false
 debug_actions_steps: 0
