--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -2,31 +2,26 @@
 
 defaults:
   - _self_
+  - window: default
+  - ckpt: default
   - dataset: null
   - data: null
   - model: null
   - callbacks: default
   - logger: null
-  - trainer: gpu
+  - trainer: predict
   - paths: default
   - extras: default
   - hydra: default
-  - experiment: null 
+  - stage: null
+  - experiment: null
+  - optional local: default
 
-task_name: "eval_retriever"
+task_name: ${stage.task_name}
+tags: ${stage.tags}
 
 # seed for reproducibility; keep configurable via CLI override
 seed: 42
 
-# 持久化评估产物（默认关闭，在具体 experiment 中开启）
-eval_persist:
-  retriever:
-    enabled: false
-    output_dir: ${dataset.materialized_dir}/eval_retriever
-    splits: ["test"]
-    textualize: false
-  gflownet:
-    enabled: false
-    output_dir: ${dataset.materialized_dir}/eval_gflownet
-    splits: ["test"]
-    textualize: false
+# Stage-driven checkpoint (stage configs should set this explicitly, e.g. `${ckpt.retriever}`).
+ckpt_path: ${stage.ckpt_path}
