--- a/configs/experiment/eval_retriever_default.yaml
+++ b/configs/experiment/eval_retriever_default.yaml
@@ -1,34 +1,15 @@
-# configs/experiment/eval_retriever_default.yaml
-
 # @package _global_
+#
+# Default experiment wiring for retriever evaluation.
+# Dataset should be overridden per experiment (or via CLI).
 
 defaults:
-  - override /data: retriever
-  - override /dataset: null
-  - override /model: retriever_module
+  - override /stage: retriever_eval
+  - override /logger: none
+
+# Keep repo configs environment-agnostic; provide checkpoint paths via env/CLI.
+ckpt:
+  retriever: ${oc.env:RETRIEVER_CKPT,null}
 
 tags: ["eval", "retriever"]
 
-task_name: "eval_retriever"
-ckpt_path: null  # 评估时可通过 CLI 传入
-
-# 默认开启 g_agent 生成，依赖 dataset.paths.embeddings 解析 LMDB。
-eval_persist:
-  retriever:
-    enabled: true
-    output_dir: ${dataset.materialized_dir}/eval_retriever
-    splits: ["test"]
-    textualize: true
-  gflownet:
-    enabled: false
-
-g_agent:
-  enabled: true
-  splits: ["train", "validation", "test"]
-  output_dir: ${dataset.materialized_dir}/g_agent
-  anchor_top_k: 200
-  force_include_gt:
-    train: true
-    validation: false
-    test: false
-  skip_retriever_metrics: false
