--- a/configs/experiment/eval_gflownet_webqsp.yaml
+++ b/configs/experiment/eval_gflownet_webqsp.yaml
@@ -3,13 +3,6 @@
 defaults:
   - eval_gflownet_default
   - override /dataset: webqsp
-  - override /logger: null
 
-tags: ["eval", "gflownet", "webqsp"]
+tags: ["webqsp", "eval_gflownet"]
 
-model:
-  embedder_cfg:
-    projector_checkpoint: "logs/train_retriever_webqsp/runs/2025-12-15_17-40-20/checkpoints/epoch_021.ckpt"
-
-ckpt_path: "logs/train_gflownet_webqsp/runs/2025-12-16_19-26-05/checkpoints/epoch_059.ckpt"
-task_name: "eval_gflownet_webqsp"
