--- a/configs/experiment/eval_retriever_gtsqa.yaml
+++ b/configs/experiment/eval_retriever_gtsqa.yaml
@@ -4,4 +4,5 @@ defaults:
   - eval_retriever_default
   - override /dataset: gtsqa
 
-tags: ["retriever", "eval", "gtsqa"]
+tags: ["gtsqa", "eval_retriever"]
+
