--- a/configs/experiment/eval_retriever_kgqagen.yaml
+++ b/configs/experiment/eval_retriever_kgqagen.yaml
@@ -4,4 +4,5 @@ defaults:
   - eval_retriever_default
   - override /dataset: kgqagen
 
-tags: ["retriever", "eval", "kgqagen"]
+tags: ["kgqagen", "eval_retriever"]
+
