--- a/configs/experiment/llm_reasoner_truth_webqsp.yaml
+++ b/configs/experiment/llm_reasoner_truth_webqsp.yaml
@@ -1,18 +1,7 @@
 # @package _global_
 
 defaults:
+  - llm_reasoner_truth_default
   - override /dataset: webqsp
-  - override /data: llm_reasoner_truth
-  - override /model: llm_reasoner_truth
-  - override /trainer: cpu
 
-tags: ["eval", "llm_reasoner", "truth", "webqsp"]
-task_name: "llm_reasoner_truth_webqsp"
-
-ckpt_path: null
-
-g_agent:
-  skip_retriever_metrics: true
-  enabled: false
-
-# prediction-only; metrics computed inside model.on_predict_epoch_end
+tags: ["webqsp", "llm_reasoner", "truth"]
