--- a/configs/hydra/default.yaml
+++ b/configs/hydra/default.yaml
@@ -16,4 +16,6 @@ job_logging:
   handlers:
     file:
       # Incorporates fix from https://github.com/facebookresearch/hydra/pull/2242
-      filename: ${hydra.runtime.output_dir}/${task_name}.log
+      # NOTE: `task_name` may contain `/` (e.g., "eval/retriever"), which would be interpreted as a subdirectory
+      # and crash unless we pre-create it. Use a safe filename; the run directory already encodes the stage.
+      filename: ${hydra.runtime.output_dir}/${hydra.job.name}.log
