--- a/configs/model/gflownet_module.yaml
+++ b/configs/model/gflownet_module.yaml
@@ -2,7 +2,7 @@ defaults:
   - _self_
   - env@env_cfg: graph
   - policy@policy_cfg: mixer
-  - reward@reward_cfg: answer_only
+  - reward@reward_cfg: answer_fraction
   - actor@actor_cfg: gflownet_actor
   - embedder@embedder_cfg: default
   - estimator@estimator_cfg: gflownet_estimator
