--- a/configs/model/retriever_module.yaml
+++ b/configs/model/retriever_module.yaml
@@ -32,5 +32,5 @@ optimizer:
 scheduler: null
 
 evaluation_cfg:
-  ranking_k: [1, 5, 10, 25, 50, 100, 200, 300, 400]
-  answer_recall_k: [1, 5, 10, 25, 50, 100, 200, 300, 400]
+  ranking_k: ${window.k_values}
+  answer_recall_k: ${window.k_values}
