--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,6 +4,7 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
+  - window: default
   - dataset: null
   - data: null
   - model: null
