--- a/configs/dataset/cwq-sub.yaml
+++ b/configs/dataset/cwq-sub.yaml
@@ -16,6 +16,7 @@ paths:
   processed: ${dataset.materialized_dir}/processed
 
 sample_filter_path: ${dataset.out_dir}/sub_filter.json
+drop_zero_positive: true
 
 entity_normalization: none
 entity_text_mode: regex
