--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -6,7 +6,7 @@ defaults:
   - run: default
   - dataset: null
   - data: g_retrieval
-  - model: gflownet
+  - model: dual_flow
   - callbacks: default
   - logger: null
   - trainer: predict
